adicionando a primeira versão do git workflows (#28)